@@ -28,6 +28,7 @@
         <dependency org="javax.xml" name="jaxb-api" rev="2.0" conf="buildtime,jaxb1,jaxb2->default"/>
         <dependency org="javax.xml" name="jaxb-impl" rev="2.0" conf="buildtime,jaxb1,jaxb2->default"/>
         <dependency org="javax.xml" name="jaxb1-impl" rev="2.0" conf="buildtime,jaxb1->default"/>
+        <dependency org="javax.activation" name="activation" rev="1.0.2" conf="buildtime,jaxb2->default"/>
 
         <!-- castor only dependencies -->
         <dependency org="org.castor" name="castor" rev="1.0" conf="buildtime,castor->default"/>
@@ -52,5 +53,6 @@
         <dependency org="easymock" name="easymock" rev="1.1" conf="test->default"/>
         <dependency org="clover" name="clover" rev="1.3.11" conf="test->default"/>
         <dependency org="javax.xml" name="jaxb-xjc" rev="2.0" conf="test->default"/>
+        <dependency org="apache" name="log4j" rev="1.2.9" conf="test->default"/>
     </dependencies>
 </ivy-module>
