@@ -1,0 +1,6 @@
+log4j.rootCategory=INFO, stdout
+log4j.logger.org.springframework.oxm=DEBUG
+
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
